Bug 486013 - [1.9][tests] Test case issues
Fixes failures due to deprecated constructors of sub classes of Number
and Class.newInstance(). Fix is either to use .valueOf(), or
@SuppressWarnings or IGNORE the usage of deprecated.