@@ -1,9 +1,13 @@
 /*******************************************************************************
- * Copyright (c) 2005, 2014 IBM Corporation and others.
+ * Copyright (c) 2005, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/legal/epl-v10.html
+ *
+ * This is an implementation of an early-draft specification developed under the Java
+ * Community Process (JCP) and is made available for testing and evaluation purposes
+ * only. The code is not compatible with any specification of the JCP.
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
@@ -11944,7 +11948,7 @@ public void testBug190623() {
 			"        }\n" +
 			"    }\n" +
 			"    private static Number getNumber() {\n" +
-			"        return new Double(Math.sqrt(-1));\n" +
+			"        return Double.valueOf(Math.sqrt(-1));\n" +
 			"    }\n" +
 			"}\n"},
 		"----------\n" +
